[WSIO-397] Add styling fixing dark mode issues

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -30,6 +30,10 @@
     word-break: break-word;
   }
 
+  h2 {
+    color: inherit;
+  }
+
   strong {
     color: unset;
   }
